--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
@@ -10,7 +10,7 @@
           <!--<button class="btn btn-primary" type="button" [routerLink]="['/mainpage/hierarchy/adddept']">
             Add
           </button>-->
-          <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddDepartment()">Add</button>
+          <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddDepartment()" *ngIf="access">Add</button>
         </div>
       </div>
     </div>
@@ -44,7 +44,8 @@
               <td>{{doc?.ModifiedBy}}</td>
               <td>{{doc?.ModifiedDate | date }}</td>
               <td><span class="status" [ngClass]="getStatusClass('Active')">Active</span></td>
-              <td class="text-right" (click)="editBrand(doc)"><i class="bi bi-pencil"></i></td>
+              <td class="text-right" (click)="editBrand(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
+              <td *ngIf="!access">Restricted</td>
             </tr>
           </ng-template>
         </p-table>
