--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
@@ -85,7 +85,8 @@
               <td>{{doc?.createdBy}}</td>
               <td>{{doc?.createdDate}}</td>              
               <td>{{doc?.totalusers}}</td>              
-              <td class="text-center" (click)="editdoc(doc)"><i class="bi bi-pencil"></i></td>
+              <td class="text-center" (click)="editdoc(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
+              <td *ngIf="!access">Restricted</td>
             </tr>
           </ng-template>
         </p-table>
