--- a/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
@@ -41,7 +41,8 @@
             <td>{{doc?.ModifiedBy}}</td>
             <td>{{doc?.ModifiedDate | date}}</td>
                         <td><span class="status" [ngClass]="getStatusClass(doc['Status'])">{{doc.Status}} </span></td>
-                        <td class="text-center"><i *ngIf="doc?.Status!='Approved'" (click)="editdoc(doc)" class="bi bi-pencil"></i></td>
+                        <td class="text-center" *ngIf="access"><i *ngIf="doc?.Status!='Approved'" (click)="editdoc(doc)" class="bi bi-pencil"></i></td>
+                        <td *ngIf="!access">Restricted</td>
                     </tr>
                 </ng-template>
             </p-table>
