--- a/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
@@ -44,7 +44,8 @@
                         <td>{{template?.CreatedBy}}</td>
                         <td>{{template?.CreatedBy}}</td>
                         <td><span class="status" [ngClass]="getStatusClass(template['Status'])">{{template?.Status}} </span></td>
-                        <td class="text-center"><i (click)="editdoc(template)" class="bi bi-pencil"></i></td>
+                        <td class="text-center" *ngIf="access"><i (click)="editdoc(template)" class="bi bi-pencil"></i></td>
+                        <td *ngIf="!access">Restricted</td>
                     </tr>
                 </ng-template>
             </p-table>
