--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -7,7 +7,7 @@
         <h4 class="page-title flex-grow-1">Document Print Request</h4>
         <div class="d-flex page-title-actions">
           <input type="text" class="form-control" placeholder="Search" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')">
-          <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddPrint()">New</button>
+          <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddPrint()" *ngIf="access">New</button>
         </div>
       </div>
     </div>
@@ -41,7 +41,8 @@
               <td>{{doc?.noofcopies}}</td>
 
               <!-- <td><span class="status" [ngClass]="getStatusClass(doc['status'])">{{doc.status}} </span></td> -->
-              <td class="text-center" (click)="editdoc(doc)"><i class="bi bi-pencil"></i></td>
+              <td class="text-center" (click)="editdoc(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
+              <td *ngIf="!access">Restricted</td>
             </tr>
           </ng-template>
         </p-table>
