--- a/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
@@ -58,11 +58,12 @@
                   >{{ effective.status }}
                 </span>
               </td>
-              <td class="text-center">
+              <td class="text-center" *ngIf="access">
                 <a (click)="navigateToReviewEffective(effective)"
                   ><i class="bi bi-arrow-right"></i
                 ></a>
               </td>
+              <td *ngIf="!access">Restricted</td>
             </tr>
           </ng-template>
         </p-table>
