--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
@@ -6,7 +6,7 @@
               <h4 class="page-title flex-grow-1">Existing Document Requests</h4>
               <div class="d-flex page-title-actions">
                 <input type="text" class="form-control" placeholder="Search">
-                <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()">New</button>
+                <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()" *ngIf="access">New</button>
               </div>
             </div>
       </div>
@@ -44,7 +44,8 @@
                       <td>{{existingdoc?.reviewDate| date}}</td>
                       <!-- <td>{{existingdoc?.approvedby}}</td>
                       <td>{{existingdoc?.approvedOn| date}}</td> -->
-                      <td class="text-center"><i (click)="editExistingDoc(existingdoc)" class="bi bi-pencil"></i></td>
+                      <td class="text-center" *ngIf="access"><i (click)="editExistingDoc(existingdoc)" class="bi bi-pencil"></i></td>
+                      <td *ngIf="!access">Restricted</td>
                   </tr>
               </ng-template>
           </p-table>
