--- a/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
@@ -66,7 +66,8 @@
                   >{{ docPreperation.status }}
                 </span>
               </td>
-              <td class="text-center"><a (click)="navigateToAddPreparation(docPreperation)"><i *ngIf="docPreperation?.status=='In Progress' || docPreperation?.status=='IN-PROGRESS' || docPreperation?.status=='In-Progress'" class="bi bi-arrow-right"></i></a></td>
+              <td class="text-center" *ngIf="access"><a (click)="navigateToAddPreparation(docPreperation)"><i *ngIf="docPreperation?.status=='In Progress' || docPreperation?.status=='IN-PROGRESS' || docPreperation?.status=='In-Progress'" class="bi bi-arrow-right"></i></a></td>
+              <td *ngIf="!access">Restricted</td>
             </tr>
           </ng-template>
         </p-table>
