--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Admin-Home/Admin-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Admin-Home/Admin-home.component.html
@@ -47,16 +47,16 @@
       </div>
     </div>
 
-    <div class="col col-lg-3">
+    <!-- <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('Approval')">
         <div class="card-body">
           <i class="fa fa-chart-line"></i>
           <h5 class="card-title">Approval Configurations</h5>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="col col-lg-3">
+    <!-- <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('groups')">
         <div class="card-body">
           <i class="fa fa-chart-line"></i>
@@ -64,8 +64,8 @@
         </div>
       </div>
     
-    </div>
-    <div class="col col-lg-3">
+    </div> -->
+    <!-- <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('Roles')">
         <div class="card-body">
           <i class="fa fa-chart-line"></i>
@@ -80,14 +80,14 @@
           <h5 class="card-title">Departments</h5>
         </div>
       </div>
-    </div>
-    <div class="col col-lg-3">
+    </div> -->
+    <!-- <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('activeuser')">
         <div class="card-body">
           <i class="fa fa-chart-line"></i>
           <h5 class="card-title">Activate/De-Activate User</h5>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   </div>
