--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
@@ -10,7 +10,7 @@
           <!--<button class="btn btn-primary" type="button" [routerLink]="['/mainpage/hierarchy/adddept']">
             Add
           </button>-->
-          <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddDepartment()" *ngIf="access">Add</button>
+          <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddDepartment()" *ngIf="access">New</button>
         </div>
       </div>
     </div>
