--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/securitymgmt/securitymgmt.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/securitymgmt/securitymgmt.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <div class="row p-2">
       <div class="col">
-        <h4 class="page-title">Security Configuration</h4>
+        <h4 class="page-title">Security Configuratuin</h4>
       </div>
     </div>
     <div class="row p-2">
@@ -86,7 +86,7 @@
 
           <div class="form-group row my-4" *ngIf="access">
             <div class="col-sm-10 offset-sm-2">
-              <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
+              <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Back</button>
               <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid">Submit</button>
               <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
             </div>
@@ -96,10 +96,7 @@
       </div>
     </div>
   </div>
-
-
 </body>
-
 
 <style>
   .form-control {
