--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
@@ -199,7 +199,7 @@
                 id="userConfig"
                 name="userConfig"
                 placeholder=""
-                [(ngModel)]="profile.userConfig" [disabled]="viewMode"
+                [(ngModel)]="profile.userMgmt" [disabled]="viewMode"
                
               />
             </div>
