--- a/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
@@ -6,7 +6,7 @@
                 <h4 class="page-title flex-grow-1">Document type configuration</h4>
                 <div class="d-flex page-title-actions">
                   <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
-                  <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddDocumentType()">New</button>
+                  <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddDocumentType()" *ngIf="access">New</button>
                 </div>
               </div>
         </div>
@@ -41,7 +41,8 @@
             <td>{{doc?.ModifiedBy}}</td>
             <td>{{doc?.ModifiedDate | date}}</td>
                         <td><span class="status" [ngClass]="getStatusClass(doc['Status'])">{{doc.Status}} </span></td>
-                        <td class="text-center"><i *ngIf="doc?.Status!='Approved'" (click)="editdoc(doc)" class="bi bi-pencil"></i></td>
+                        <td class="text-center" *ngIf="access"><i *ngIf="doc?.Status!='Approved'" (click)="editdoc(doc)" class="bi bi-pencil"></i></td>
+                        <td *ngIf="!access">Restricted</td>
                     </tr>
                 </ng-template>
             </p-table>
