--- a/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
@@ -8,7 +8,7 @@
                   
                  <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search Templates" />
                 
-                  <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddTemplate()">New</button>
+                  <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddTemplate()" *ngIf="access">New</button>
                 </div>
               </div>
         </div>
@@ -44,7 +44,8 @@
                         <td>{{template?.CreatedBy}}</td>
                         <td>{{template?.CreatedDate | date }}</td>
                         <td><span class="status" [ngClass]="getStatusClass(template['Status'])">{{template?.Status}} </span></td>
-                        <td class="text-center"><i (click)="editdoc(template)" class="bi bi-pencil"></i></td>
+                        <td class="text-center" *ngIf="access"><i (click)="editdoc(template)" class="bi bi-pencil"></i></td>
+                        <td *ngIf="!access">Restricted</td>
                     </tr>
                 </ng-template>
             </p-table>
