--- a/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
@@ -7,7 +7,7 @@
                 <div class="d-flex page-title-actions">
                     <input type="text" class="form-control" pInputText type="text" (input)="workflowTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search Workflows" />
                 
-                  <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddWorkflow()">New</button>
+                  <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddWorkflow()" *ngIf="access">New</button>
                 </div>
               </div>
         </div>
@@ -44,7 +44,8 @@
                         <td>{{docItem.CreatedBy}}</td>
                         <td>{{docItem.CreatedDate}}</td>
                         <td><span class="status text-nowrap" [ngClass]="getStatusClass(docItem['Status'])">{{docItem.Status}} </span></td>
-                        <td class="text-center" *ngIf="docItem.Status!='Approved'" (click)="editdoc(docItem)"><i class="bi bi-pencil"></i></td>
+                        <td class="text-center"  *ngIf="access"><i class="bi bi-pencil" *ngIf="docItem.Status!='Approved'" (click)="editdoc(docItem)"></i></td>
+                        <td *ngIf="!access">Restricted</td>
                     </tr>
                 </ng-template>
             </p-table>
