--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.scss
@@ -7,4 +7,11 @@
   .w-150{
     width: 150px;
   }
-  
+  .p-paginator .p-dropdown {    
+    height: unset;
+  }
+
+  :host ::ng-deep .p-paginator .p-dropdown {    
+    height: unset;
+    min-width: unset;
+  }
