--- a/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.scss
@@ -8,4 +8,11 @@
   }
   
   
-  
+  .p-paginator .p-dropdown {    
+    height: unset;
+  }
+
+  :host ::ng-deep .p-paginator .p-dropdown {    
+    height: unset;
+    min-width: unset;
+  }
