--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/securitymgmt/securitymgmt.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/securitymgmt/securitymgmt.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <div class="row p-2">
       <div class="col">
-        <h4 class="page-title">Security Configuratuin</h4>
+        <h4 class="page-title">Security Configuration</h4>
       </div>
     </div>
     <div class="row p-2">
@@ -65,6 +65,23 @@
 
 
             <div class="form-group row">
+              <label for="Iattempts" class="col-sm-2 col-form-label">Invalid Attempts<span style="color: red; font-weight: bolder;">*</span></label>
+              <div class="col-sm-10">
+                <input type="text"
+                       class="form-control"
+                       id="Iattempts"
+                       name="Iattempts"
+                       placeholder=""
+                       [(ngModel)]="securityType.InvalidAttempts" [disabled]="viewMode"
+                       required
+                       #IattemptsInput="ngModel" />
+                <div *ngIf="IattemptsInput.invalid && (IattemptsInput.dirty || IattemptsInput.touched)" class="text-danger">
+                  Give No Of Attempts.
+                </div>
+
+              </div>
+            </div>
+            <div class="form-group row">
               <label for="sessiontimeout" class="col-sm-2 col-form-label">Session Time Out<span style="color: red; font-weight: bolder;">*</span></label>
               <div class="col-sm-10">
                 <input type="text"
@@ -84,7 +101,7 @@
 
           </div>
 
-          <div class="form-group row my-4" *ngIf="access">
+          <div class="form-group row my-4"  *ngIf="access">
             <div class="col-sm-10 offset-sm-2">
               <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Back</button>
               <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid">Submit</button>
@@ -100,6 +117,6 @@
 
 <style>
   .form-control {
-  max-width: 350px;
-}
+    max-width: 350px;
+  }
 </style>
