--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/User-configuration/user-configuration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/User-configuration/user-configuration.component.html
@@ -26,8 +26,9 @@
               <th pSortableColumn="LastName" style="width:15%">Last Name<p-sortIcon field="LastName"></p-sortIcon></th>
               <th pSortableColumn="UserID" style="width:20%">UserId<p-sortIcon field="UserID"></p-sortIcon></th>
               <th pSortableColumn="Department" style="width:200px">Department<p-sortIcon field="Department"></p-sortIcon></th>
-              <th pSortableColumn="Empid" style="width:200px">Employee Id<p-sortIcon field="Empid"></p-sortIcon></th>
+              <!-- <th pSortableColumn="Empid" style="width:200px">Employee Id<p-sortIcon field="Empid"></p-sortIcon></th> -->
               <th pSortableColumn="EmailId" style="width:200px">E-mail Id<p-sortIcon field="EmailId"></p-sortIcon></th>
+              <th pSortableColumn="Role" style="width:200px">Role <p-sortIcon field="Role"></p-sortIcon></th>
               <th pSortableColumn="ModifiedBy" style="width:200px">Modify <p-sortIcon field="ModifiedBy"></p-sortIcon></th>
               <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
               <th pSortableColumn="Action" style="width:200px">Action <p-sortIcon field="Action"></p-sortIcon></th>
@@ -40,8 +41,9 @@
               <td>{{doc?.LastName}}</td>
               <td>{{doc?.UserID}}</td>
               <td>{{doc?.Department}}</td>
-              <td>{{doc?.Empid}}</td>
+              <!-- <td>{{doc?.Empid}}</td> -->
               <td>{{doc?.EmailId}}</td>
+              <td>{{doc?.Role}}</td>
               <td>{{doc?.ModifiedBy}}</td>
               <td><span class="status"  [ngClass]="getStatusClass(doc['Status'])">{{doc?.Status}} </span></td>
               <td class="text-center" (click)="editdoc(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
