--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
@@ -6,7 +6,7 @@
                 <h4 class="page-title flex-grow-1">Document Revision</h4>
                 <div class="d-flex page-title-actions">
                   <input type="text" class="form-control" placeholder="Search">
-                  <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()">New</button>
+                  <!-- <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()">New</button> -->
                 </div>
               </div>
         </div>
