--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
@@ -68,23 +68,25 @@
             [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
           <ng-template pTemplate="header">
             <tr>            
-              <th>S.No</th>
+              <th>S.No</th> 
               <th pSortableColumn="usergroupname" style="width:20%">User Group Name<p-sortIcon field="usergroupname"></p-sortIcon></th>
               <th pSortableColumn="code" style="width:20%">Unique Code<p-sortIcon field="code"></p-sortIcon></th>
               <th pSortableColumn="registeredby" style="width:20%">Registered By<p-sortIcon field="registeredby"></p-sortIcon></th>
               <th pSortableColumn="registeredon" style="width:20%">Registered On<p-sortIcon field="registeredon"></p-sortIcon></th>
+              <th pSortableColumn="Status" style="width:20%">Status<p-sortIcon field="Status"></p-sortIcon></th>
               <th pSortableColumn="totalusers" style="width:20%">Total Users<p-sortIcon field="totalusers"></p-sortIcon></th>
               <th style="width:80px">Actions</th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-doc let-i="rowIndex">
             <tr>
-              <td>{{ i + 1 }}</td>  
+              <td>{{ i + 1 }}</td>   
               <td>{{doc?.usergroupname}}</td>
               <td>{{doc?.code}}</td>
               <td>{{doc?.createdBy}}</td>
               <td>{{doc?.createdDate}}</td>              
-              <td>{{doc?.totalusers}}</td>              
+              <td>{{doc?.totalusers}}</td>
+              <td>{{doc?.Status}}</td>               
               <td class="text-center" (click)="editdoc(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
               <td *ngIf="!access">Restricted</td>
             </tr>
