--- a/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
@@ -40,7 +40,7 @@
                         <td>{{docItem.workflowName}}</td>
                         <td>{{docItem.documentstage}}</td>
                         <td>{{docItem.documenttype}}</td>
-                        <td>{{docItem.department}}</td>
+                        <td>{{docItem.departments}}</td>
                         <td>{{docItem.CreatedBy}}</td>
                         <td>{{docItem.CreatedDate}}</td>
                         <td><span class="status text-nowrap" [ngClass]="getStatusClass(docItem['Status'])">{{docItem.Status}} </span></td>
