--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
@@ -7,7 +7,7 @@
         <h4 class="page-title flex-grow-1">Plant Management</h4>
         <div class="d-flex page-title-actions">
           <input type="text" class="form-control" placeholder="Search">
-          <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddPlant()" *ngIf="access">Add</button>
+          <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddPlant()" *ngIf="access">New</button>
         </div>
       </div>
     </div>
@@ -15,7 +15,7 @@
   <div class="row p-2">
     <div class="col">
       <div class="p-4 bg-white shadow-dark rounded-2">
-        <p-table tableStyleClass="table table-striped" [value]="types" [rows]="itemsPerPage"
+        <p-table #templatesTable tableStyleClass="table table-striped" [value]="types" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="types.length"
             [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
          
@@ -25,6 +25,7 @@
               <!--<th pSortableColumn="S.No" style="width:20%">S.No</th>-->
               <th pSortableColumn="Plant Name" style="width:10%">Plant Name</th>
               <th pSortableColumn="Plant Code" style="width:15%">Plant Code</th>
+              <th pSortableColumn="PlantAddress" style="width:20%">Plant Address</th>
               <th pSortableColumn="Comments" style="width:20%">Comments</th>
               <th pSortableColumn="Registered By" style="width:200px">Registered By</th>
               <th pSortableColumn="Registered On" style="width:200px">Registered On </th>
@@ -38,6 +39,7 @@
               <td>{{ i + 1 }}</td>
               <td>{{doc?.PlantName}}</td>
               <td>{{doc?.PlantCode}}</td>
+              <td>{{doc?.PlantAddress}}</td>
               <td>{{doc?.Comments}}</td>
               <td>{{doc?.ModifiedBy}}</td>
               <td>{{doc?.ModifiedDate }}</td>             
