--- a/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
@@ -25,9 +25,9 @@
                         <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
                         <!-- <th pSortableColumn="modifiedBy" style="width:20%">Registered by<p-sortIcon field="modifiedBy"></p-sortIcon></th>
                         <th pSortableColumn="modifiedDate" style="width:200px">Registered On <p-sortIcon field="modifiedDate"></p-sortIcon></th> -->
-                        <th pSortableColumn="approvedby" style="width:20%">Workflow<p-sortIcon field="workflow"></p-sortIcon></th>
-                        <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
-                        <th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th>
+                        <th pSortableColumn="Workflow" style="width:20%">Workflow<p-sortIcon field="workflow"></p-sortIcon></th>
+                        <!-- <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
+                        <th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th> -->
                         <th pSortableColumn="status" style="width:200px">Status <p-sortIcon field="status"></p-sortIcon></th>
                         <th style="width:80px">Modify</th>
                     </tr>
@@ -41,8 +41,8 @@
                         <td>{{docType?.workflow}}</td>
                         <!-- <td>{{docType?.modifiedBy}}</td>
                         <td>{{docType?.modifiedDate| date}}</td> -->
-                        <td>{{docType?.approvedby}}</td>
-                        <td>{{docType?.approvedOn| date}}</td>
+                        <!-- <td>{{docType?.approvedby}}</td>
+                        <td>{{docType?.approvedOn| date}}</td> -->
                         <td><span class="status" [ngClass]="getStatusClass(docType['status'])">{{docType.status}} </span></td>
                         <td class="text-center" *ngIf="access"><i *ngIf="docType?.status=='In-Progress'" (click)="editdocreq(docType)" class="bi bi-pencil"></i></td>
                         <td *ngIf="!access">Restricted</td>
