--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.scss
@@ -1,3 +1,5 @@
+@import '~quill/dist/quill.snow.css';
+
 .mw-350 {
   max-width: 350px;
 }
@@ -74,3 +76,16 @@
     }
   }
 }
+
+
+
+
+
+
+
+
+// .page-textarea {
+//   width: 33cm; /* A4 width */
+//   height: 200px; /* A4 height */
+//   resize: none; /* Prevent resizing */
+// }
