--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -116,15 +116,12 @@
           <div class="form-group row">
             <label for="document" class="col-sm-2 col-form-label">Document<span
               style="color: red; font-weight: bolder;">*</span></label>
-            <div *ngIf="!preparation.document" class="col-sm-10">
+            <!-- <div *ngIf="!preparation.document" class="col-sm-10">
               <input class="form-control" type="file" id="fileInput" name="fileInput" #fileInput [disabled]="isUploaded"
                 (change)="onFileSelected($event)" [disabled]="viewMode" required>
-                <!-- <div *ngIf="!preparation.document && isFileError" class="text-danger">
-                  Document is required.
-                </div> -->
-            </div>
+            </div> -->
             
-            <div *ngIf="preparation.document" class="col-sm-1">
+            <div  class="col-sm-1">
               <a class="link-opacity-100-hover" (click)="previewtemplate(template)">View Document</a>
             </div>
             <div *ngIf="preparation.document" class="col-sm-9">
